--- a/setup/package.json
+++ b/setup/package.json
@@ -12,12 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@mysten/bcs": "^0.8.1",
-    "@mysten/kiosk": "^0.7.6",
-    "@mysten/sui.js": "^0.44.0",
+    "@mysten/bcs": "^1.6.0",
+    "@mysten/kiosk": "^0.11.4",
+    "@mysten/move-bytecode-template": "^0.1.0",
+    "@mysten/sui": "^1.26.1",
     "dotenv": "^16.3.1",
-    "typescript": "^5.0.4",
-    "move-binary-format-wasm": "file:../move-binary-format-wasm"
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
